--- a/tag/math/埃拉托斯特尼筛法.md
+++ b/tag/math/埃拉托斯特尼筛法.md
@@ -1,1 +1,14 @@
+这个是素数处理的一个需要记住的常识知识.
 
+---
+
+为什么从j不从`2*i`开始
+```
+j=i*i,j<=n;j=+i
+```
+
+因为
+1. `2*i`是2的倍数
+2. `3*i`是3的倍数
+3. `4*i`是4的倍数
+4. 以此类推
