--- a/nasa/为什么无穷大总是0x3f3f3f3f.md
+++ b/nasa/为什么无穷大总是0x3f3f3f3f.md
@@ -3,8 +3,14 @@
 #### 足够大
 
 #### 可以使用memset来给整个数组赋值
+```
+memset( ptr, 0x3f,)
+```
+#### 满足 INF+INF 依然是 INF
 
-#### 满足 INF+INF = INF
+1. 0x3f3f3f3f = 1061109567
+2. INF+INF = 2122219134 < MAX_INT, 但是三个就不行了.
+3. MAX_INT = 2^31-1=2147483647
 
 ### REF
 - https://blog.csdn.net/qq_34131212/article/details/55290093
