--- a/tag/binary_search/二分查找为什么那么难.md
+++ b/tag/binary_search/二分查找为什么那么难.md
@@ -23,3 +23,6 @@
 
 ### ref
 - https://blog.csdn.net/ltyqljhwcm/article/details/52772002
+
+非常全面的总结
+- http://www.cnblogs.com/wuyuegb2312/archive/2013/05/26/3090369.html
