--- a/solution_pool/3_longest-substring-without-repeating-characters/二次折戟.md
+++ b/solution_pool/3_longest-substring-without-repeating-characters/二次折戟.md
@@ -1,2 +1,9 @@
 ### 没有思路的时候, 不要浪费时间
-昨天遇到这个题目, 怎么也解不出来, 犯了低级错误, 开始胡乱的试. 结果可想而知. 脑子不清晰的状态, 就要停下来.
+昨天遇到这个题目, 怎么也解不出来, 犯了低级错误, 开始胡乱的试. 
+
+结果可想而知. 脑子不清晰的状态, 就要停下来.
+### 使用slide_window
+1. 代码清晰
+2. 容易理解
+
+比起来使用map的跳跃来计算, 这个虽然时间复杂度高一点, 但是可靠性高.
