--- a/tag/dynamic_programming/编辑距离的状态分析.md
+++ b/tag/dynamic_programming/编辑距离的状态分析.md
@@ -19,6 +19,26 @@ A[0,i-1] = B[0,j-1]
 ```
 对于 D(i,j),直接将A[i]替换为B[j]
 
+这里是替换
+
+### 从 D(i-1,j)到 D(i,j)
+当前:
+```
+A[0,i-1] = B[0,j]
+```
+对于 D(i,j),直接删除 A[i]
+
+这里是删除操作
+
+### 从 D(i,j-1)到 D(i,j)
+当前:
+```
+A[0,i]=B[0,j-1]
+```
+为了D(i,j),直接将B[j]插入到 A[i]的后面.
+
+这里是 insertion
+
 ---
 
 https://www.imooc.com/article/69626
