--- a/nasa/monotone_queue/死海不是海_单调队列不是队列.md
+++ b/nasa/monotone_queue/死海不是海_单调队列不是队列.md
@@ -1,1 +1,19 @@
+链接的内容不错, 多多学习.
 
+单调队列其实是一种对于deque的封装.
+
+队列是一种高级抽象, 具体的表现就是 `FIFO`, 先进先出.
+
+### 基本操作
+1. push_back
+2. front_pop
+
+### 约束条件
+1. 数据的单调性
+2. 队列的大小
+
+### 应用
+- 维护区间最大值
+
+### link
+- http://www.cnblogs.com/saywhy/p/6726016.html
