--- a/nasa/对待难题要先热热身.md
+++ b/nasa/对待难题要先热热身.md
@@ -1,2 +1,5 @@
+### 进入状态是需要时间的
+如果大脑没有预热, 直接就来一道难题来考察, 那就太强人所难了. 会让人的挫折感加倍, 更加容易提前放弃.
+
 是不是很多leetcode题目很简单, 简单的你都不觉得不可思议, 这些题目是用来热身的, 不是用来考察你的能力的, 考察能力的题目是mid和hard.
 
